# bambu-farm

./: .gitignore  IMPLEMENTATION_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md
rust-api/: .env.example  Cargo.toml  README.md  schema.sql  test-api.ps1  test-api.sh
rust-api/src/: api.rs  auth.rs  config.rs  dashboard.html  endpoints.rs  gcode_validate.rs  job_endpoints.rs  jobs.rs  main.rs  models.rs  state.rs  stream.rs  telemetry.rs
rust-api/src/static/: admin.html  submit.html
