[package]
name = "bambu-live-api"
version = "0.1.0"
edition = "2021"
default-run = "bambu-live-api"

[[bin]]
name = "bambu-live-api"
path = "src/main.rs"

[[bin]]
name = "bambu"
path = "src/bin/bambu.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
colored = "2"
